[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Menu/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://src/Menu/Sprites/Background.png" type="Texture" id=2]
[ext_resource path="res://src/Menu/Sprites/LevelButton.jpg" type="Texture" id=3]
[ext_resource path="res://src/Menu/Sprites/LevelButtonPressed.png" type="Texture" id=4]


[node name="LevelSelect" type="Node"]
script = ExtResource( 1 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( -11.2527, 0 )
scale = Vector2( 0.13, 0.134 )
texture = ExtResource( 2 )
centered = false

[node name="Buttons" type="Node" parent="."]

[node name="LevelOne" type="TextureButton" parent="Buttons"]
margin_left = 16.4043
margin_top = 350.643
margin_right = 1040.4
margin_bottom = 926.643
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="LevelTwo" type="TextureButton" parent="Buttons"]
margin_left = 362.946
margin_top = 352.694
margin_right = 1386.95
margin_bottom = 928.694
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="LevelThree" type="TextureButton" parent="Buttons"]
margin_left = 709.489
margin_top = 354.745
margin_right = 1733.49
margin_bottom = 930.745
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )
[connection signal="pressed" from="Buttons/LevelOne" to="." method="_on_LevelOne_pressed"]
[connection signal="pressed" from="Buttons/LevelTwo" to="." method="_on_LevelTwo_pressed"]
[connection signal="pressed" from="Buttons/LevelThree" to="." method="_on_LevelThree_pressed"]
